--- a/index.html
+++ b/index.html
@@ -7,15 +7,34 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav>
+
+    <!-- Header Section Design -->
+    <header class="header-section">
+        <!-- Navbar section start -->
+        <nav class="navbar display-flex">
             <div class="brand-logo">
-                <h2>G3 Architects</h2>
+                <h2 class="brand-title">G3 Architects</h2>
             </div>
             <div class="nav-menu">
-
+                <ul class="menu-list display-flex">
+                    <li class=" menu-item"><a href="#" class=" menu-link">Home</a></li>
+                    <li class=" menu-item"><a href="#" class=" menu-link">About</a></li>
+                    <li class=" menu-item"><a href="#" class=" menu-link">Contact Us</a></li>
+                    <li class=" menu-item"><a href="#" class=" menu-link">Login</a></li>
+                </ul>
             </div>
         </nav>
+
+
+        <!-- Banner section start  -->
+        <div class="banner-content-container">
+            <h1 class="banner-title text-title-color">Brand New Group of Architects </h1>
+            <p class="banner-subtitle text-subtitle-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="primary-button">Explore More</button>
+        </div>
+        <div class="banner-image-container">
+            <img src="./images/banner.png" alt="Website banner" class="banner-image">
+        </div>
     </header>
 
 
