--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section Design -->
     <header class="header-section">
         <!-- Navbar section start -->
-        <nav class="navbar display-flex">
+        <nav class="navbar width-container display-flex">
             <div class="brand-logo">
                 <h2 class="brand-title">G3 Architects</h2>
             </div>
@@ -32,15 +32,27 @@
             <p class="banner-subtitle text-subtitle-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
             <button class="primary-button">Explore More</button>
         </div>
-        <div class="banner-image-container">
+        <div class="banner-image-container width-container">
             <img src="./images/banner.png" alt="Website banner" class="banner-image">
         </div>
     </header>
 
 
-    <main>
-
-    </main>
+    <section class="team-features">
+        <div class="features-content-container width-container display-flex">
+            <div class="team-image-container">
+                <img src="./images/team1.png" alt="Number one team image" class="team-image">
+                <img src="./images/team2.png" alt="Number two team image" class="team-image">
+                <img src="./images/team3.png" alt="Number three team image" class="team-image">
+                <img src="./images/team4.png" alt="Number four team image" class="team-image">
+            </div>
+            <div class="team-text-container">
+                <h1 class="team-features-title"><span id="quick-list">Quick list</span> of Our <span id="features-text">Features</span></h1>
+                <p class="team-features-subtitle text-subtitle-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-button">Explore More</button>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
