--- a/index.html
+++ b/index.html
@@ -54,6 +54,45 @@
         </div>
     </section>
 
+    <!-- Facts Section Part Design -->
+     <section class="facts-section">
+        <div class="fact-content-container width-container">
+            <div class="fact-text">
+                <h1 class="facts-title text-title-color">Some Facts</h1>
+                <p class="facts-subtitle text-subtitle-color">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="fact-cards-container">
+                <div class="fact-card display-flex">
+                    <div class="fact-card-one">
+                        <img src="./images/icons/ribon.png" alt="">
+                        <h2>54</h2>
+                        <p>Awards Winnings</p>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div class="fact-card-two">
+                        <img src="./images/icons/projects.png" alt="">
+                        <h2>1458</h2>
+                        <p>Project Finished</p>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div class="fact-card-three">
+                        <img src="./images/icons/customers.png" alt="">
+                        <h2>590</h2>
+                        <p>Clients Worked</p>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div class="fact-card-four">
+                        <img src="./images/icons/email.png" alt="">
+                        <h2>22578</h2>
+                        <p>Email Send</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
 
